# literature-file-renamer

./: README.md  pyproject.toml
literature_file_renamer/: __main__.py  names.py
tests/: test_rename.py
